# kiro-support-feishu-bot-agentscope-mimo

./: .env.example  .gitignore  README.md  agent_service.py  config.py  feishu_gateway.py  kb_tool.py  logger.py  main.py  pyproject.toml  web_tools.py
knowledge_base/: KB.example
prompts/: kiro_agent_prompt.example
